@@ -1,3 +1,8 @@
+2010-06-09
+
+	* src/action.c: prevent double free when using %f.
+	  Obtain thread lock in gdk_input_add() callbacks.
+
 2010-06-07
 
 	* libsylph/prefs_common.[ch]
